--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,18 @@
 [package]
 name = "proximal-optimize"
-description = "A simple proximal search hill-climbing optimizer"
+description = "A Rust port of proxmin"
 version = "0.1.0"
 authors = ["Kendall Koning <kkoning@kkoning.net>"]
 edition = "2018"
 
 repository = "https://github.com/kkoning/proximal-optimize"
-categories = ["science", "no-std"]
+categories = ["science"]
 readme = "README.md"
 keywords = ["learning", "proximal", "optimization"]
 license = "AFL-3.0"
+
+[dependencies]
+log = "0.4.6"
+
+[dev-dependencies]
+env_logger = "0.6.1"
